2004-09-29  Kim F. Storm  <storm@cua.dk>

	* progmodes/gdb-ui.el (breakpoint): Define as fringe bitmap.
	(gdb-mouse-toggle-breakpoint): Fix fringe-bitmaps-at-pos usage.
	(gdb-put-breakpoint-icon): Use breakpoint bitmap.

	* fringe.el (fringe-bitmap-p): New macro.
	(fringe-bitmaps): Add standard fringe bitmaps on load.

2004-09-28  Matthew Mundell  <matt@mundell.ukfsn.org>  (tiny change)

	* calendar/diary-lib.el (list-diary-entries): Save diary buffer
	from diary display excursion.  Store diary buffer's point for
	`simple-diary-display'.
	(simple-diary-display): Set window point and start when
	displaying buffer, to preserve point.

2004-09-27  Luc Teirlinck  <teirllm@auburn.edu>

	* textmodes/enriched.el (enriched-translations): Replace defconst
	with defvar.

2004-09-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Doc fix.
	(pr-version): New version number (6.8.1).
	(pr-ps-file-using-ghostscript): Use make-temp-file instead of
	make-temp-name.
	(pr-delete-file): Check if file exists before deleting it.  Reported by
	Lennart Borgman <lennart.borgman.073@student.lu.se>.

2004-09-26  Stefan  <monnier@iro.umontreal.ca>

	* term.el (term-display-table): New variable.
	(term-mode): Use it.
	(term-exec-1): Set the coding system to binary.
	(term-emulate-terminal): Decode the string before inserting it.

2004-09-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.el (term-ansi-at-eval-string, term-ansi-default-fg)
	(term-ansi-default-bg, term-ansi-current-temp): Delete unused
	vars.
	(map): Bind S-prior, S-next and S-insert.
	(term-mode): Set `indent-tabs-mode' to nil.
	(term-paste): New function to be bound to S-insert.
	(term-send-del, term-send-backspace): Change the strings sent.
	(term-termcap-format): Synchronyze with etc/e/eterm.ti.
	(term-handle-colors-array): Fix handling of underline and reverse.
	(term-handle-ansi-escape): Do not handle smcup/rmcup. Add
	comments.
	(term-erase-in-line): Fix comparison.